# whatsapp-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
scripts/: whatsapp_user_cli.py
tests/: conftest.py  test_framesocket.py  test_noise.py  test_pbutil.py  test_wabinary_roundtrip.py  test_xeddsa.py  test_xeddsa_sign.py
tools/oracle/: go.mod  go.sum  main.go
wa/: __init__.py  cache.py  cli.py  clientpayload.py  handshake.py  history.py  macos_contacts.py  media.py  pair.py  pbutil.py  peerreq.py  prekeys.py  store.py
wa/crypto/: __init__.py  noise.py  xeddsa.py  xeddsa_sign.py
wa/proto/: __init__.py
wa/proto/_gen/: __init__.py  waAdv_pb2.py  waCert_pb2.py  waCompanionReg_pb2.py  waWa6_pb2.py
wa/signal/: __init__.py  session.py
wa/transport/: __init__.py  framesocket.py
wa/wabinary/: __init__.py  _tokens_data.py  decoder.py  encoder.py  jid.py  node.py  tokens.py
